[gd_scene load_steps=17 format=2]

[ext_resource path="res://Games/ObservationGame/CirclesManager.gd" type="Script" id=1]
[ext_resource path="res://Games/ObservationGame/ObservationGame.gd" type="Script" id=2]
[ext_resource path="res://Games/ObservationGame/Circle/Circle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Games/ObservationGame/CountdownLabel.gd" type="Script" id=5]
[ext_resource path="res://Games/ObservationGame/LineToConnectCircles.tscn" type="PackedScene" id=6]
[ext_resource path="res://Games/ObservationGame/TimeTakenLabel.gd" type="Script" id=7]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Light.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Art/ObservationIcon.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 192
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.729412, 0.729412, 0.729412, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-SemiBold.ttf"

[sub_resource type="DynamicFont" id=8]
size = 90
outline_size = 1
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 65
font_data = SubResource( 6 )

[node name="ObservationGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.7776, 0.88704, 0.96, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CirclesManager" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
circle = ExtResource( 3 )
line_to_connect_circles = ExtResource( 6 )

[node name="Lines" type="Node2D" parent="CirclesManager"]

[node name="CountdownLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -213.0
margin_top = -123.0
margin_right = 213.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
seconds_left_to_start = 4

[node name="IntervalTimer" type="Timer" parent="CountdownLabel"]
one_shot = true
autostart = true

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 556.601
margin_right = 100.0
margin_bottom = 625.601
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="GameEnd" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="GameEnd"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.776471, 0.886275, 0.960784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GameEnd"]
light_mask = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -460.0
margin_right = 300.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameEndContainer" type="VBoxContainer" parent="GameEnd"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameIcon" type="TextureRect" parent="GameEnd/GameEndContainer"]
margin_right = 720.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="GameName" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 404.0
margin_right = 720.0
margin_bottom = 613.0
rect_min_size = Vector2( 720, 209 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
text = "Observation"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeTakenMessage" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 617.0
margin_right = 720.0
margin_bottom = 682.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 9 )
text = "You took"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeTakenLabel" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 686.0
margin_right = 720.0
margin_bottom = 886.0
rect_min_size = Vector2( 0, 200 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
text = "## Seconds"
align = 1
valign = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="CountdownLabel/IntervalTimer" to="CountdownLabel" method="_on_StartTimer_timeout"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
